@startuml

skinparam nodesep 250
skinparam ranksep 100
class ProjetoPublico {
- LocalDate dataInicio
- LocalDate dataFim
+ String getResumo()
}


class ProjetoPrivado {
}
class Profissional {
- int id
- String cpf
- String nome
- {static} int contador
+ Profissional()
+ int getId()
+ void setId(int)
+ String getCpf()
+ void setCpf(String)
+ String getNome()
+ void setNome(String)
+ boolean equals(Object)
}


abstract class Projeto {
- int numero
- LocalDate dataInclusao
- String descricao
+ int getNumero()
+ void setNumero(int)
+ LocalDate getDataInclusao()
+ void setDataInclusao(LocalDate)
+ String getDescricao()
+ void setDescricao(String)
+ ArrayList<Profissional> getProfissionais()
+ void adicionarProfissional(Profissional)
+ void removerProfissional(String)
+ {abstract}String getResumo()
}




Projeto <|-- ProjetoPublico
Projeto <|-- ProjetoPrivado
Projeto "0..*  profissionais  " <-left-> "  0..* projetos  " Profissional

Projeto -[hidden]- Profissional

@enduml